# organization-information-fetcher

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
resources/: company_names.csv  cpc_ver3.csv  domains.txt  isic_rev5.csv
src/organization_information_fetcher_app/: main.py
src/organization_information_fetcher_app/adaptors/: fetching_domain.py  fetching_domain_crewai.py  fetching_domain_langchain.py
src/organization_information_fetcher_app/core/domains/: cleaner.py
src/organization_information_fetcher_app/core/ports/: fetching.py  sinker.py
src/organization_information_fetcher_app/core/usecases/: fetch_organization_information.py
src/organization_information_fetcher_app/domains/: models.py
src/organization_information_fetcher_app/infrastructure/adapters/: fetching_agent.py
src/organization_information_fetcher_app/infrastructure/repositories/: referential_csv.py  sinker_csv.py
src/organization_information_fetcher_app/ports/: fetching.py  referential.py  sinker.py
src/organization_information_fetcher_app/repository/: referential_csv.py  sinker_csv.py
src/organization_information_fetcher_app/services/: cleaner.py
src/test/adaptors/: fetching_domain_langchain.py
src/test/core/domains/: test_cleaner.py
src/test/core/usecases/: test_fetch_organization_information.py
src/test/infrastructure/adapters/: test_fetching_agent.py
src/test/infrastructure/repositories/: test_referential_csv.py  test_sinker_csv.py
src/test/repository/: referential_csv.py
src/test/services/: cleaner.py
