[project]
name = "organization-information-fetcher"
version = "0.1.0"
description = "Project to retrieve information about an organization"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "bs4>=0.0.2",
    "crewai>=0.105.0",
    "dateparser>=1.2.1",
    "google-search-results>=2.4.2",
    "googlesearch-python>=1.3.0",
    "langchain>=0.3.19",
    "langchain-cli>=0.0.35",
    "langchain-community>=0.3.18",
    "langchain-mistralai>=0.2.7",
    "mistralai>=1.5.1",
    "pandas>=2.2.3",
    "pip>=25.0.1",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "scikit-learn>=1.6.1",
    "sentence-transformers>=3.4.1",
    "streamable>=1.4.8",
]

[project.scripts]
organization-information-fetcher = "organization_information_fetcher_app:main"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.1.2",
    "flake8-pyproject>=1.2.3",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "types-dateparser>=1.2.0.20250208",
    "types-requests>=2.32.0.20250306",
]

[tool.black]
line-length = 88
target-version = ['py312']
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503", "E501"]

[tool.isort]
profile = "black"

[tool.mypy]
explicit_package_bases = true
ignore_missing_imports = true
mypy_path = "src"
